syntax = "proto3";
package pb;

import "account.proto";
option go_package="github.com/nhan-ngo-usf/NBank/pb";

message GetAccountRequest {
        string account_id = 1;
}
message GetAccountResponse {
        Account account = 1;
}